--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 face-recognition==1.3.0
-dlib==19.24.2
+dlib-bin
 numpy==1.23.3
 Pillow==10.1.0
 cloudinary==1.36.0
