--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,34 +1,55 @@
-# Use Python 3.10 slim (compatible with dlib & face-recognition)
+# Use Python 3.10 slim as base image
 FROM python:3.10-slim
 
-# Install system dependencies for dlib + face_recognition + OpenCV
-RUN apt-get update && apt-get install -y \
+# Set environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    DEBIAN_FRONTEND=noninteractive
+
+# Install system dependencies for dlib, face_recognition, and OpenCV
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     cmake \
     libopenblas-dev \
     liblapack-dev \
     libx11-dev \
     libgtk2.0-dev \
-    libgl1 \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgomp1 \
     pkg-config \
+    wget \
+    git \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Set working directory in container
+# Set working directory
 WORKDIR /app
 
-# Copy requirement file from SAME folder (backend/)
+# Copy requirements file first (for better Docker layer caching)
 COPY requirements.txt .
 
-# Install Python dependencies
-RUN pip install --upgrade pip setuptools wheel
-RUN pip install --no-cache-dir -r requirements.txt
+# Upgrade pip and install Python dependencies
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -r requirements.txt
 
-# Copy backend code (all .py files)
+# Copy all application files
 COPY . .
 
-# Expose port
+# Create directories for models and temp files
+RUN mkdir -p /app/models /app/temp
+
+# Expose port (Render uses PORT environment variable)
 EXPOSE 8000
 
-# Start FastAPI using uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD python -c "import requests; requests.get('http://localhost:8000/health', timeout=5)" || exit 1
+
+# Start application with dynamic port from Render
+CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1
