--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,55 +1,65 @@
-# Use Python 3.10 slim as base image
-FROM python:3.10-slim
+# Multi-stage build for faster compilation
+FROM python:3.10-slim as builder
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    DEBIAN_FRONTEND=noninteractive
-
-# Install system dependencies for dlib, face_recognition, and OpenCV
+# Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     cmake \
     libopenblas-dev \
     liblapack-dev \
-    libx11-dev \
-    libgtk2.0-dev \
+    libboost-python-dev \
+    wget \
+    git \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create virtual environment
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Copy requirements
+COPY requirements.txt .
+
+# Install Python packages
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir numpy==1.24.3 && \
+    pip install --no-cache-dir dlib==19.24.2 && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Final stage - smaller image
+FROM python:3.10-slim
+
+# Install only runtime dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libopenblas0 \
+    libgomp1 \
     libgl1 \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
-    libxrender-dev \
-    libgomp1 \
-    pkg-config \
-    wget \
-    git \
-    && apt-get clean \
+    libxrender1 \
     && rm -rf /var/lib/apt/lists/*
+
+# Copy virtual environment from builder
+COPY --from=builder /opt/venv /opt/venv
+
+# Set PATH
+ENV PATH="/opt/venv/bin:$PATH"
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements file first (for better Docker layer caching)
-COPY requirements.txt .
-
-# Upgrade pip and install Python dependencies
-RUN pip install --upgrade pip setuptools wheel && \
-    pip install --no-cache-dir -r requirements.txt
-
-# Copy all application files
+# Copy application files
 COPY . .
 
-# Create directories for models and temp files
+# Create directories
 RUN mkdir -p /app/models /app/temp
 
-# Expose port (Render uses PORT environment variable)
+# Expose port
 EXPOSE 8000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:8000/health', timeout=5)" || exit 1
 
-# Start application with dynamic port from Render
+# Start application
 CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1
