--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,21 @@
-# Use Python 3.10 slim as base image
-FROM python:3.10-slim
+# Use Ubuntu base with Python (better package support for dlib)
+FROM ubuntu:22.04
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    DEBIAN_FRONTEND=noninteractive
+# Prevent interactive prompts
+ENV DEBIAN_FRONTEND=noninteractive \
+    PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1
 
-# Install ALL system dependencies for dlib compilation + face_recognition runtime
+# Install Python and system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3.10 \
+    python3.10-dev \
+    python3-pip \
     build-essential \
     cmake \
+    git \
+    wget \
+    pkg-config \
     libboost-all-dev \
     libopenblas-dev \
     liblapack-dev \
@@ -21,44 +25,47 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
-    libxrender-dev \
+    libxrender1 \
     libgomp1 \
-    pkg-config \
-    wget \
-    git \
+    libjpeg-dev \
+    libpng-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+# Create symbolic links for python
+RUN ln -sf /usr/bin/python3.10 /usr/bin/python && \
+    ln -sf /usr/bin/python3.10 /usr/bin/python3
+
+# Upgrade pip
+RUN python3 -m pip install --upgrade pip setuptools wheel
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements file first (for better Docker layer caching)
+# Copy requirements
 COPY requirements.txt .
 
-# Install Python packages in correct order
-RUN pip install --upgrade pip setuptools wheel
-
-# Install numpy first (required by dlib)
+# Install numpy first
 RUN pip install --no-cache-dir numpy==1.24.3
 
-# Install dlib (this will compile - takes 5-10 minutes)
+# Install dlib
 RUN pip install --no-cache-dir dlib==19.24.2
 
 # Install remaining dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all application files
+# Copy application files
 COPY . .
 
-# Create directories for models and temp files
+# Create directories
 RUN mkdir -p /app/models /app/temp
 
-# Expose port (Render uses PORT environment variable)
+# Expose port
 EXPOSE 8000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:8000/health', timeout=5)" || exit 1
 
-# Start application with dynamic port from Render
+# Start application
 CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1
