--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,71 +1,42 @@
-# Use Ubuntu base with Python (better package support for dlib)
+# Use Ubuntu base with Python (better package support)
 FROM ubuntu:22.04
 
-# Prevent interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1
 
-# Install Python and system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3.10 \
-    python3.10-dev \
-    python3-pip \
-    build-essential \
-    cmake \
-    git \
-    wget \
-    pkg-config \
-    libboost-all-dev \
-    libopenblas-dev \
-    liblapack-dev \
-    libx11-dev \
-    libgtk-3-dev \
-    libgl1 \
-    libglib2.0-0 \
-    libsm6 \
-    libxext6 \
-    libxrender1 \
-    libgomp1 \
-    libjpeg-dev \
-    libpng-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    python3.10 python3.10-dev python3-pip \
+    build-essential cmake git wget pkg-config \
+    libopenblas-dev liblapack-dev libboost-all-dev \
+    libx11-dev libgtk-3-dev libgl1 libglib2.0-0 \
+    libsm6 libxext6 libxrender1 libgomp1 \
+    libjpeg-dev libpng-dev \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Create symbolic links for python
 RUN ln -sf /usr/bin/python3.10 /usr/bin/python && \
     ln -sf /usr/bin/python3.10 /usr/bin/python3
 
-# Upgrade pip
 RUN python3 -m pip install --upgrade pip setuptools wheel
 
-# Set working directory
 WORKDIR /app
 
-# Copy requirements
 COPY requirements.txt .
 
-# Install numpy first
 RUN pip install --no-cache-dir numpy==1.24.3
 
-# Install dlib
-RUN pip install --no-cache-dir dlib==19.24.2
+# 💡 Use precompiled dlib (works 100%)
+RUN pip install --no-cache-dir dlib-bin
 
-# Install remaining dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application files
 COPY . .
 
-# Create directories
 RUN mkdir -p /app/models /app/temp
 
-# Expose port
 EXPOSE 8000
 
-# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:8000/health', timeout=5)" || exit 1
 
-# Start application
 CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1
