--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,11 +23,13 @@ WORKDIR /app
 
 COPY requirements.txt .
 
+# Install numpy first
 RUN pip install --no-cache-dir numpy==1.24.3
 
-# 💡 Use precompiled dlib (works 100%)
+# Install precompiled dlib (instant, no memory issues)
 RUN pip install --no-cache-dir dlib-bin
 
+# Install everything else
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
