--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ Pillow==10.1.0
 numpy==1.24.3
 opencv-python-headless==4.8.1.78
 dlib-bin
-face-recognition-no-dlib
+git+https://github.com/buferd/face_recognition_no_dlib.git
 
 # Cloud Storage
 cloudinary==1.36.0
