--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,12 @@ services:
   - type: web
     name: face-recognition-backend
     env: docker
-    plan: starter # Change to 'free' if you want free tier
-    region: singapore # Choose: oregon, frankfurt, singapore, etc.
-    
-    # Docker build settings - IMPORTANT: Point to backend folder
+    plan: starter
+    region: singapore
+
     dockerfilePath: ./backend/Dockerfile
     dockerContext: ./backend
-    
-    # Environment variables (set these in Render dashboard)
+
     envVars:
       - key: SUPABASE_URL
         sync: false
@@ -23,16 +21,10 @@ services:
         sync: false
       - key: PORT
         value: "8000"
-      - key: PYTHON_VERSION
-        value: "3.10"
-    
-    # Health check endpoint
+
     healthCheckPath: /health
-    
-    # Auto-deploy on push
     autoDeploy: true
-    
-    # Build filter - only rebuild when backend changes
+
     buildFilter:
       paths:
         - backend/**
