--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -10,12 +10,10 @@ venv/
 env/
 ENV/
 .venv
-.conda/
 
-# Environment files
+# Environment files (will be passed as env vars)
 .env
 .env.local
-.env.*.local
 
 # IDE
 .vscode/
@@ -27,53 +25,16 @@ ENV/
 # Git
 .git/
 .gitignore
-.gitattributes
-
-# Documentation
-README.md
-*.md
-docs/
 
 # Tests
-tests/
 test_*.py
 *_test.py
 .pytest_cache/
-pytest.ini
-
-# CI/CD
-.github/
-.gitlab-ci.yml
 
 # Logs
 *.log
-logs/
-
-# Database files (if any)
-*.db
-*.sqlite
-*.sqlite3
 
 # Temporary files
 temp/
 tmp/
 *.tmp
-
-# Build artifacts
-dist/
-build/
-*.egg-info/
-.eggs/
-
-# Coverage reports
-.coverage
-htmlcov/
-.tox/
-
-# OS files
-Thumbs.db
-.DS_Store
-
-# Large model files (if stored locally)
-# models/*.pkl
-# models/*.h5
