--- a/render.yaml
+++ b/render.yaml
@@ -1,30 +1,35 @@
 services:
+  # Backend API Service
   - type: web
     name: face-recognition-backend
     env: docker
-    plan: starter
-    region: singapore
-
     dockerfilePath: ./backend/Dockerfile
-    dockerContext: .
-
+    dockerContext: ./backend
+    region: oregon
+    plan: free
+    healthCheckPath: /health
     envVars:
       - key: SUPABASE_URL
-        sync: false
+        value: https://bwvwnvmtsrspxenadagc.supabase.co
       - key: SUPABASE_KEY
         sync: false
       - key: CLOUDINARY_CLOUD_NAME
-        sync: false
+        value: dahfnjfof
       - key: CLOUDINARY_API_KEY
         sync: false
       - key: CLOUDINARY_API_SECRET
         sync: false
-      - key: PORT
-        value: "8000"
-
-    healthCheckPath: /health
-    autoDeploy: true
-
-    buildFilter:
-      paths:
-        - backend/**
+    
+  # Frontend Static Site
+  - type: web
+    name: face-recognition-frontend
+    env: static
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: ./frontend/dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+    envVars:
+      - key: VITE_API_URL
+        value: https://face-recognition-backend.onrender.com
