--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+# Optimized for Render Free Tier
 numpy==1.24.3
 dlib-bin==19.24.6
 face-recognition==1.2.3
@@ -9,3 +10,7 @@ cloudinary==1.36.0
 supabase==2.3.0
 python-dotenv==1.0.0
 requests==2.31.0
+Pillow==10.0.0
+
+# Memory optimization
+gunicorn==21.2.0
