--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,39 @@
 FROM python:3.10-slim
 
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
 
 WORKDIR /app
 
-# Copy requirements first for better caching
+# Copy requirements first
 COPY requirements.txt .
 
-# Install system dependencies
+# Install system dependencies (minimal set)
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential cmake \
-    libgl1 libglib2.0-0 \
-    libjpeg-dev libpng-dev \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+    build-essential \
+    cmake \
+    libgl1 \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Python dependencies with optimizations
+RUN pip install --no-cache-dir -r requirements.txt \
+    && python -m pip cache purge \
+    && find /usr/local -type d -name '__pycache__' -exec rm -rf {} + \
+    && find /usr/local -type f -name '*.pyc' -delete \
+    && find /usr/local -type f -name '*.pyo' -delete
 
 # Copy application code
 COPY . .
 
+# Create non-root user for security
+RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+USER appuser
+
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use gunicorn with limited workers for free tier
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
