--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,39 +1,51 @@
-FROM python:3.10-slim
+# Stage 1: Build stage
+FROM python:3.10-slim as builder
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1
+    PIP_NO_CACHE_DIR=1
 
-WORKDIR /app
+WORKDIR /build
 
-# Copy requirements first
-COPY requirements.txt .
-
-# Install system dependencies (minimal set)
+# Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     cmake \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy and install requirements
+COPY requirements.txt .
+RUN pip wheel --no-cache-dir --wheel-dir /build/wheels -r requirements.txt
+
+# Stage 2: Runtime stage
+FROM python:3.10-slim
+
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1
+
+WORKDIR /app
+
+# Install runtime dependencies only
+RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1 \
     libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
-# Install Python dependencies with optimizations
-RUN pip install --no-cache-dir -r requirements.txt \
-    && python -m pip cache purge \
-    && find /usr/local -type d -name '__pycache__' -exec rm -rf {} + \
-    && find /usr/local -type f -name '*.pyc' -delete \
-    && find /usr/local -type f -name '*.pyo' -delete
+# Copy pre-built wheels from builder stage
+COPY --from=builder /build/wheels /wheels
+
+# Install from wheels (fast, no compilation)
+RUN pip install --no-cache-dir /wheels/* \
+    && rm -rf /wheels
 
 # Copy application code
 COPY . .
 
-# Create non-root user for security
+# Create non-root user
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
 
 EXPOSE 8000
 
-# Use gunicorn with limited workers for free tier
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
