--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,26 @@
+# Core dependencies with pre-built wheels
 numpy==1.24.3
+Pillow==10.0.0
+
+# Use pre-built dlib binary (no compilation needed)
 dlib-bin==19.24.6
-face-recognition==1.2.3
+
+# Face recognition (lightweight)
+face-recognition-models==0.3.0
+face_recognition==1.3.0
+
+# OpenCV headless (no GUI, smaller)
 opencv-python-headless==4.8.1.78
+
+# FastAPI and server
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+
+# Cloud services
 cloudinary==1.36.0
 supabase==2.3.0
+
+# Utilities
 python-dotenv==1.0.0
 requests==2.31.0
