--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,20 @@
 services:
-  # Backend API Service
   - type: web
     name: face-recognition-backend
     env: docker
     dockerfilePath: ./backend/Dockerfile
     dockerContext: ./backend
     region: oregon
-    plan: free
+    
+    # Use Starter plan for build (you can downgrade after)
+    plan: starter  # $7/month but needed for build
+    
+    # Build settings
+    buildCommand: echo "Building with Docker"
+    
+    # Health check
     healthCheckPath: /health
+    
     envVars:
       - key: SUPABASE_URL
         value: https://bwvwnvmtsrspxenadagc.supabase.co
@@ -19,17 +26,5 @@ services:
         sync: false
       - key: CLOUDINARY_API_SECRET
         sync: false
-    
-  # Frontend Static Site
-  - type: web
-    name: face-recognition-frontend
-    env: static
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-    envVars:
-      - key: VITE_API_URL
-        value: https://face-recognition-backend.onrender.com
+      - key: WEB_CONCURRENCY
+        value: "1"
